2011-04-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c (apply_zoom):  Prevent double-free of custom font for tic
	labels.
	Bug #3294915

2011-04-28  Bastian Maerkisch  <bmaerkisch@web.de>

	Support for (optional) antialiasing in windows terminal via GDI+.

	* config/config.mgw, config/config.nt: Compilers have support for
	GDI+: define HAVE_GDIPLUS. Note: OpenWatcom might not support GDI+
	* config/mingw/Makefile: Include new files wgdiplus.h|cpp in build,
	add library gdiplus.
	* src/win/wgdiplus.cpp src/win/wgdiplus.h: New files. C interface
	to Windows GDI+ library. Currently supports polylines and circles.
	* src/win/wgnuplib.h src/win/wgraph.c src/win/winmain.c
	src/win/wresourc.h: Implement antialiasing for lines and and most point
	shapes. Add option to LPGW, wgnuplot.ini and popup menu to toggle
	antialiasing on and off. Default to oversampling off now that we have
	proper antialiasing. Wrap all GDI+ code in #ifdef HAVE_GDIPLUS.
	
	* src/win/wgraph.c (drawgraph) [W_fillstyle, FS_PATTERN]: Fix cycling
	of pattern styles.

	* src/wxterminal/gp_cairo.c|h (gp_cairo_default_font)
	src/wxterminal/wxt_gui.c: New function to determine	default font.
	Default is "Sans" on all systems but Windows where this	alias might
	not work work in all cases.

2011-04-27  <wtf3@users.sourceforge.net>

	* src/graphics.c:  The autotitle option for column-stacked histograms
	should honor "set key maxrows N".
	Bug #3281635

2011-04-27  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/command.c (help_command) src/win/winmain.h src/win/winmain.c
	(WinExit, ShutDown, WinCloseHelp, WinMain): Work-around for apparently
	well known html help bug, which causes spurious crashes on exit. Keep
	track of help window handle and try to close the window as soon as 
	possible. New function WinCloseHelp.

	Extensive update to color, linetype and fillstyle handling in windows
	terminal. Fixes several bugs and implements new options.
